# roast

./: .gitignore  Cargo.toml  README.md
.github/workflows/: perf.yml  release.yml  test.yml
benches/: roast_perf_test.rs
js/json-sort-cli/: package-lock.json
src/: formatter.rs  lines.rs  main.rs  sort.rs
tests/: package-lock.json  test_buffered.rs  test_directory.rs  test_io_mode.rs  test_node_modules.rs  test_silent.rs  test_version.rs
tests/fixtures/: simple.json
tests/src/: test-arrays.js  test-help.js  test-indentation.js  test-line-endings.js  test-n-modules.js  test-silent.js  test-tabs.js  test-version.js  test.js
tests/src/util/: data.js
