[package]
name = "roast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
colored = "3.0.0"
git2 = "0.18.3"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "roast_perf_test"
harness = false
