[package]
name = "roast"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
colored = "3.0.0"
git2 = "0.20"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[dev-dependencies]
criterion = "0.5"
assert_cmd = "2.0"
tempfile = "3.19"
assertables = "9.5.1"

[[bench]]
name = "roast_perf_test"
harness = false
